[gd_scene load_steps=3 format=3 uid="uid://cgcjn564k64cg"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_ras6x"]
[ext_resource type="Texture2D" uid="uid://b5vuknhdklqoo" path="res://Art/Cutscene/opening1.png" id="2_mswot"]

[node name="MainMenu" type="CenterContainer"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(1280, 960)
offset_right = 2560.0
offset_bottom = 1920.0
size_flags_horizontal = 4
size_flags_vertical = 4
use_top_left = true
script = ExtResource("1_ras6x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_mswot")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
tabs_visible = false

[node name="Main" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer/Main"]
layout_mode = 2
theme_override_constants/separation = -8
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Enchants vs Plants"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Main Menu"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer/Main"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="PlayGameButton" type="Button" parent="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Play Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitGameButton" type="Button" parent="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[node name="Options" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/TabContainer/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/TabContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="SoundVolumeLabel" type="Label" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Sound Volume"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
min_value = -20.0
max_value = 5.0

[node name="SoundVolumeSlider" type="HSlider" parent="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
min_value = -20.0
max_value = 5.0

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/TabContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Go Back"

[connection signal="pressed" from="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2/PlayGameButton" to="." method="_on_play_game_button_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2/OptionsButton" to="." method="_on_options_button_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/PanelContainer/TabContainer/Main/VBoxContainer2/QuitGameButton" to="." method="_on_quit_game_button_pressed" flags=18]
[connection signal="value_changed" from="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed" flags=18]
[connection signal="value_changed" from="MarginContainer/PanelContainer/TabContainer/Options/HBoxContainer/VBoxContainer2/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed" flags=18]
[connection signal="pressed" from="MarginContainer/PanelContainer/TabContainer/Options/BackButton" to="." method="_on_back_button_pressed" flags=18]
